--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Monitoring_system
 APP_ENV=local
 APP_KEY=base64:NL27/6kOYnzsh+5EbZZQMlz8gEjJhJhPooRwqYyhblk=
 APP_DEBUG=true
